<resources>
    <string name="app_name">SignUpForm</string>
    <string name="data">Your Details</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="username_field">Enter Username</string>
    <string name="password_field">Enter password</string>
    <string name="email_field">Enter Email</string>
    <string name="save_button">save</string>
</resources>
